Release v0.0.2: Improve terminal stability and documentation